--- a/typescript-practice/styles/globals.css
+++ b/typescript-practice/styles/globals.css
@@ -15,12 +15,441 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
   body {
     color: white;
     background: black;
+  }
+} */
+
+body,
+html {
+  overflow-x: hidden;
+}
+
+.favorites {
+  width: 100vw;
+}
+
+.container {
+  width: 100vw;
+  margin: auto;
+}
+
+a {
+  padding-left: 1rem;
+  font-size: 15px;
+  padding-top: 0.5rem;
+  color: rgb(51 172 255);
+  cursor: pointer;
+}
+
+h1 {
+  display: flex;
+  justify-content: center;
+  padding-left: 2rem;
+  font-family: serif;
+  padding-bottom: 4rem;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.header {
+  background-color: rgb(27, 123, 255);
+  width: 100%;
+  margin-top: 0;
+  color: white;
+  font-family: sans-serif;
+  font-size: 15px;
+  height: 70px;
+  border-bottom: 4px dotted red;
+}
+
+.bigbutton {
+  margin-top: 3rem;
+  border-radius: 10px;
+  background-color: rgb(190 243 253);
+  padding: 10px;
+  margin-bottom: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  color: black;
+  font-weight: 700;
+  font-size: x-large;
+  font-family: serif;
+  cursor: pointer;
+  border-style: none;
+  margin-right: 15%;
+}
+
+button:hover {
+  background-color: aqua;
+  color: black;
+  transition: 1s ease;
+}
+
+img {
+  width: 500px;
+  height: 500px;
+}
+
+.generate-img {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.image-container {
+  justify-content: center;
+}
+
+i {
+  position: relative;
+  cursor: pointer;
+  right: 2rem;
+}
+
+.clicked {
+  color: lightblue;
+}
+
+.column {
+  justify-content: center;
+  margin-top: 0;
+  width: 100vw;
+  margin-left: 2.5rem;
+  margin-bottom: 3rem;
+}
+
+.dom-image {
+  object-fit: contain;
+  width: 500px;
+  height: 500px;
+  border-radius: 5px;
+}
+
+h6 {
+  margin-top: 0;
+}
+
+textarea {
+  width: 500px;
+  height: 40px;
+  resize: none;
+}
+
+li {
+  list-style-type: none;
+}
+
+.save-btn {
+  margin-top: 0.5em;
+  border-radius: 5px;
+  background-color: rgb(190 243 253);
+  padding: 25px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  color: black;
+  font-weight: 700;
+  font-size: small;
+  font-family: serif;
+  cursor: pointer;
+  border-style: none;
+  margin-right: 23%;
+}
+
+.favorites-view-text {
+  color: rgb(33, 111, 222);
+  padding-left: 1rem;
+  font-size: xx-large;
+  margin-left: 2rem;
+}
+
+.column-editing {
+  align-items: center;
+  justify-content: center;
+}
+
+.text-align {
+  text-align: center;
+}
+
+.image {
+  width: 300px;
+  height: 300px;
+  position: relative;
+  right: 2.5rem;
+  border-radius: 10px;
+}
+
+.space-between {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  width: 100%;
+}
+
+.close-modal-btn {
+  position: absolute;
+  background-color: rgb(182, 182, 182);
+  color: white;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  top: 8rem;
+  left: 1rem;
+  border-radius: 4px;
+  font-size: x-large;
+  border: none;
+}
+
+.confirm-modal {
+  position: absolute;
+  background-color: rgb(235 93 93);
+  color: white;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  right: 1rem;
+  bottom: 1rem;
+  border-radius: 4px;
+  font-size: x-large;
+  border: none;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgb(0 0 0 / 60%);
+}
+
+#modal {
+  max-width: 450px;
+  height: 200px;
+  margin: auto;
+  position: absolute;
+  background-color: white;
+  top: 0;
+  bottom: 5rem;
+  left: 0;
+  right: 0;
+  border-radius: 4px;
+}
+
+h4 {
+  color: black;
+  position: relative;
+  left: 4rem;
+  padding-top: 6%;
+  font-family: sans-serif;
+}
+
+h5 {
+  color: red;
+}
+
+#date {
+  font-size: small;
+}
+
+.lds-spinner {
+  color: official;
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.lds-spinner div {
+  transform-origin: 40px 40px;
+  animation: lds-spinner 1.2s linear infinite;
+}
+
+.lds-spinner div::after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 37px;
+  width: 6px;
+  height: 18px;
+  border-radius: 20%;
+  background: black;
+}
+
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
+}
+
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s;
+}
+
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
+}
+
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
+
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .favorites-view-text {
+    margin-left: 2rem;
+  }
+
+  .favorites-link,
+  .home {
+    font-size: 23px;
+  }
+
+  .bigbutton {
+    width: 15%;
+    font-size: 15px;
+    margin-left: 4rem;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .favorites-view-text {
+    margin-left: 20px;
+  }
+
+  .bigbutton {
+    padding: 1.5rem;
+    width: 15%;
+    margin-left: 10rem;
+  }
+
+  .image {
+    width: 600px;
+    height: 600px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .generate-img {
+    margin-right: 5%;
+  }
+
+  .bigbutton {
+    padding: 5px;
+    font-size: 10px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .image {
+    width: 300px;
+    height: 300px;
+  }
+
+  button {
+    padding: 0.5rem;
+    font-size: small;
+    position: relative;
+    right: 3rem;
+  }
+
+  .container {
+    width: 480px;
+  }
+
+  .fa-trash-can {
+    margin-left: 2rem;
+  }
+
+  .bigbutton {
+    padding: 0.5rem;
+    font-size: medium;
+    margin-right: 0;
+  }
+
+  .header {
+    width: 100%;
+  }
+
+  .dom-image {
+    width: 300px;
+    height: 200px;
+  }
+
+  textarea {
+    width: 300px;
+  }
+
+  .favorites-view-text {
+    font-size: 20px;
+  }
+
+  .save-btn {
+    margin-left: 3rem;
   }
 }
