Got object from user clicking button

--- a/typescript-practice/styles/globals.css
+++ b/typescript-practice/styles/globals.css
@@ -163,7 +163,7 @@ li {
   font-family: serif;
   cursor: pointer;
   border-style: none;
-  margin-right: 23%;
+  /* margin-right: 23%; */
 }
 
 .favorites-view-text {
