Working on modal and correct index to delete

--- a/typescript-practice/styles/globals.css
+++ b/typescript-practice/styles/globals.css
@@ -109,11 +109,11 @@ img {
   justify-content: center;
 }
 
-i {
+/* i {
   position: relative;
   cursor: pointer;
   right: 2rem;
-}
+} */
 
 .clicked {
   color: lightblue;
