--- a/typescript-practice/styles/globals.css
+++ b/typescript-practice/styles/globals.css
@@ -197,14 +197,71 @@ h5 {
   color: red;
 }
 /* these below are new styles used in rebuild */
+.close-modal-btn {
+  position: absolute;
+  background-color: rgb(182, 182, 182);
+  color: white;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  top: 8rem;
+  left: 1rem;
+  border-radius: 4px;
+  font-size: x-large;
+  border: none;
+}
+.modal-title-btn {
+  color: black;
+  position: relative;
+  left: 4rem;
+  padding-top: 6%;
+  font-family: sans-serif;
+}
+.confirm-modal {
+  position: absolute;
+  background-color: rgb(235 93 93);
+  color: white;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  right: 1rem;
+  bottom: 1rem;
+  border-radius: 4px;
+  font-size: x-large;
+  border: none;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgb(0 0 0 / 60%);
+}
+
+#modal {
+  max-width: 450px;
+  height: 200px;
+  margin: auto;
+  position: absolute;
+  background-color: white;
+  top: 0;
+  bottom: 5rem;
+  left: 0;
+  right: 0;
+  border-radius: 4px;
+}
 #date {
   font-size: small;
   font-weight: 400;
 }
-.icon-red{
+.icon-red {
   color: red;
   position: relative;
-  left: 2rem
+  left: 2rem;
 }
 .lds-spinner {
   color: official;
