--- a/typescript-practice/styles/globals.css
+++ b/typescript-practice/styles/globals.css
@@ -83,6 +83,7 @@ button:hover {
 }
 
 img {
+  margin-top: 2rem;
   width: 500px;
   height: 500px;
 }
@@ -151,7 +152,6 @@ li {
   font-family: serif;
   cursor: pointer;
   border-style: none;
-  /* margin-right: 23%; */
 }
 
 .favorites-view-text {
